made boolean values Objects rather than primitives (#163)
* made boolean values Objects rather than primitives

* altered whitespace